tests/error/compiletime_exception_in_solution/identity.nim
func identity*(n: int): int =
  static:
    raise newException(ValueError, "myValueError")
